--- a/Implementations.org
+++ b/Implementations.org
@@ -76,6 +76,36 @@ Modify org-babel function to avoid adding ~program...end program~ around ~module
 
 #+RESULTS: assert-test
 
+** error handling
+#+name: error-handling-return-ierr
+#+begin_src bash :exports code :var ierr=1 :results output :noweb no-export :cache no :shebang #!/bin/bash
+  cat <<EOF
+    if (present(ierr)) then
+      ierr = ${ierr}
+      return
+    end if
+  EOF
+#+end_src
+#+name: error-handling-filename
+#+begin_src fortran :exports code
+  write(error_unit, '(a, i0, a)', advance = "no") &
+       __FILE__&
+       //": ", __LINE__, ": "
+#+end_src
+#+name: error-handling-error_message-exit
+#+begin_src bash :exports code :var err_num=1 string="error message." :results output :noweb no-export :cache no :shebang #!/bin/bash
+   cat <<EOF
+     write(error_unit, '(a)')&
+       "${string}"
+     error stop ${err_num}
+   EOF
+#+end_src
+#+name: error-handling-exit
+#+begin_src bash :exports code :var err_num=1 :results output :noweb no-export :cache no :shebang #!/bin/bash
+  cat <<EOF
+    error stop ${err_num}
+  EOF
+#+end_src
 * utilities
 ** swap
 *** base code
